tests/invalid/break_outside_loop.c
int main() {
    int x = 5;
    break;  // Error: break outside loop
    return x;
}
// ERROR: Line 3, Error 3007